<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_open_as"
            android:title="@string/open_as"
            android:icon="@drawable/ic_menu_open_as"
             android:showAsAction="always"/>
    <item
            android:id="@+id/menu_share"
            android:title="@string/share"
            android:icon="@drawable/ic_menu_social_share"
            android:showAsAction="always"/>

    <item
            android:id="@+id/menu_cut"
            android:title="@string/menu_cut"
            android:icon="@drawable/ic_menu_content_cut"
            android:showAsAction="always"/>

    <item
            android:id="@+id/menu_rename"
            android:title="@string/menu_rename"
            android:icon="@drawable/ic_menu_action_rename"
            android:showAsAction="always"/>
    <item
            android:id="@+id/menu_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_menu_content_discard"
            android:showAsAction="always"/>

</menu>